13/12/2021 - Robson Vaamonde - Mudança na estrutura de diretório dos arquivos de configuração dos serviços de rede,
criação dos sub-diretórios de cada serviço para facilitar a administração e customomização para cenários diferentes.
Váras melhorias nos scripts e arquivos de configuração nos dias 10 até 12/12/2021 com foco mais em documentação e 
tradução, criação da validação de uso de porta nos scripts para facilitar o diagnóstico de uso de porta de serviço.

09/12/2021 - Robson Vaamonde - Melhorias gerais no PT-BR em vários arquivos Conf e Script, acréscimo da linha de 
verificação da consultado do domínio: dig no script: 03-dns.sh, criação da variável: SECRETUPDATE no arquivos de: 
00-paramentros.sh para facilitar a atualização das chaves de integração do Bind DNS e do ISC DHCP Server, acréscimo
da linha de verificar do Status dos serviços em todos os scripts, criação do Virtual Host do LogAnalyzer, customização
do script: 18-guacamole.sh com suas variáveis no arquivo: 00-parametros.sh, acrescimo da linha: zone-statistics yes; 
no arquivo: named.conf.options, criação do usuário do Netdata no Banco de Dados do MySQL no script: 13-netdata.sh e
no bloco de configuração do arquivo: 00-parametros.sh.

06/12/2021 - Robson Vaamonde - Melhoria na documentação do monitoramento de Logs dos serviços de rede utilizando o
script: 00-paramentros.sh, correção do Bug do Log do VSFTPd criando o arquivo no script: 09-vsftp.sh, 

02/12/2021 - Robson Vaamonde - Criação das variáveis do teste do laço de loop das dependências dos script e dos pacotes
de instalação das dependências de cada script no arquivo: 00-parametros.sh, ficando mais simples adicionar novas
dependências na instalação do software.

01/12/2021 - Robson Vaamonde - Customização do script: 16-fusioninventory.sh integrado com o GLPI, atualização das
versões do FusionInventory Server e Agent, atualização da variável $PATHTFTP no script: 06-tftphpa.sh, correção da